tests/diff/diff.exp
Error ---------------------------------------------------------------------------------------------- intersection.js:9:2

Cannot cast `any` to `$Diff` because:
 - Either property `a` is missing in object type [1] but exists in object type [2].
 - Or property `a` is missing in object type [3] but exists in object type [2].

   intersection.js:9:2
   9| ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
       ^^^^^^^^^^^^^^^^^^^^^^

References:
   intersection.js:9:8
   9| ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
             ^^^^^^ [1]
   intersection.js:9:32
   9| ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                                     ^^^^^^^^^^^^ [2]
   intersection.js:9:17
   9| ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                      ^^^^^^ [3]


Error --------------------------------------------------------------------------------------------- intersection.js:12:8

Cannot cast `any` to `$Diff` because property `a` is missing in object type [1] but exists in object type [2].

   intersection.js:12:8
   12| ((any: {b: B}): $Diff<{a: A} & {b: B}, {b: B}>); // Error
              ^^^^^^ [1]

References:
   intersection.js:12:23
   12| ((any: {b: B}): $Diff<{a: A} & {b: B}, {b: B}>); // Error
                             ^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- intersection.js:14:8

Cannot cast `any` to `$Diff` because property `a` is missing in object type [1] but exists in object type [2].

   intersection.js:14:8
   14| ((any: {b: B}): $Diff<{a: A, b: B, c: C}, {b: B} & {c: C}>); // Error
              ^^^^^^ [1]

References:
   intersection.js:14:23
   14| ((any: {b: B}): $Diff<{a: A, b: B, c: C}, {b: B} & {c: C}>); // Error
                             ^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- lower.js:21:4

Cannot get `y.age` because property `age` is missing in `Person` [1].

   lower.js:21:4
   21| (y.age: number); // Error -- could be void
          ^^^

References:
   lower.js:18:16
   18| declare var y: PersonWithoutAgeActual;
                      ^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- lower.js:22:2

Cannot cast `y.name` to number because string [1] is incompatible with number [2].

   lower.js:22:2
   22| (y.name: number); // Error -- should be string
        ^^^^^^

References:
   lower.js:4:9
    4|   name: string,
               ^^^^^^ [1]
   lower.js:22:10
   22| (y.name: number); // Error -- should be string
                ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- lower.js:23:3

Cannot get `y.bla` because property `bla` is missing in `Person` [1].

   lower.js:23:3
   23| y.bla; // Error -- key not found.
         ^^^

References:
   lower.js:18:16
   18| declare var y: PersonWithoutAgeActual;
                      ^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- undefined.js:8:8

Cannot cast `any` to `$Diff` because property `a` is missing in object type [1] but exists in object type [2].

   undefined.js:8:8
   8| ((any: {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
             ^^^^^^ [1]

References:
   undefined.js:8:23
   8| ((any: {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                            ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- undefined.js:10:12

Cannot cast `any` to `$Diff` because undefined [1] is incompatible with `A` [2] in property `a`.

   undefined.js:10:12
   10| ((any: {a: void, b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                  ^^^^ [1]

References:
   undefined.js:10:36
   10| ((any: {a: void, b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                                          ^ [2]


Error ---------------------------------------------------------------------------------------------------- union.js:6:25

Cannot instantiate `$Diff` because undefined property `b` [1] is incompatible with `B` [2].

   union.js:6:25
   6| declare var one : $Diff<{a: A} | {b: B}, {b: B}>;
                              ^^^^^^ [1]

References:
   union.js:6:46
   6| declare var one : $Diff<{a: A} | {b: B}, {b: B}>;
                                                   ^ [2]


Error ---------------------------------------------------------------------------------------------------- union.js:12:2

Cannot cast `two` to object type because property `a` is missing in object type [1] but exists in object type [2].

   union.js:12:2
   12| (two :  {a : A}); // error
        ^^^

References:
   union.js:9:41
    9| declare var two : $Diff<{a: A, b : B} | {b: B}, {b: B}>;
                                               ^^^^^^ [1]
   union.js:12:9
   12| (two :  {a : A}); // error
               ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- union.js:20:2

Cannot cast `four` to object type because property `a` is missing in object type [1] but exists in object type [2].

   union.js:20:2
   20| (four : {a : A, c : C}); //error
        ^^^^

References:
   union.js:18:26
   18| declare var four : $Diff<{a: A, b: B, c: C}, {a: A} | {b: B}>;
                                ^^^^^^^^^^^^^^^^^^ [1]
   union.js:20:9
   20| (four : {a : A, c : C}); //error
               ^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- union.js:21:2

Cannot cast `four` to object type because property `a` is missing in object type [1] but exists in object type [2].

   union.js:21:2
   21| (four : {a : A, b : C, c : C}); //error
        ^^^^

References:
   union.js:18:26
   18| declare var four : $Diff<{a: A, b: B, c: C}, {a: A} | {b: B}>;
                                ^^^^^^^^^^^^^^^^^^ [1]
   union.js:21:9
   21| (four : {a : A, b : C, c : C}); //error
               ^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- union.js:21:2

Cannot cast `four` to object type because property `b` is missing in object type [1] but exists in object type [2].

   union.js:21:2
   21| (four : {a : A, b : C, c : C}); //error
        ^^^^

References:
   union.js:18:26
   18| declare var four : $Diff<{a: A, b: B, c: C}, {a: A} | {b: B}>;
                                ^^^^^^^^^^^^^^^^^^ [1]
   union.js:21:9
   21| (four : {a : A, b : C, c : C}); //error
               ^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- union.js:21:2

Cannot cast `four` to object type because `B` [1] is incompatible with `C` [2] in property `b`.

   union.js:21:2
   21| (four : {a : A, b : C, c : C}); //error
        ^^^^

References:
   union.js:18:36
   18| declare var four : $Diff<{a: A, b: B, c: C}, {a: A} | {b: B}>;
                                          ^ [1]
   union.js:21:21
   21| (four : {a : A, b : C, c : C}); //error
                           ^ [2]


Error --------------------------------------------------------------------------------------------------- union.js:24:26

Cannot instantiate `$Diff` because undefined property `b` [1] is incompatible with `B` [2].

   union.js:24:26
   24| declare var five : $Diff<{a: A, c : C} | {b: B, c : C}, {a : A} | {b: B}>;
                                ^^^^^^^^^^^^^ [1]

References:
   union.js:24:71
   24| declare var five : $Diff<{a: A, c : C} | {b: B, c : C}, {a : A} | {b: B}>;
                                                                             ^ [2]


Error --------------------------------------------------------------------------------------------------- union.js:24:42

Cannot instantiate `$Diff` because undefined property `a` [1] is incompatible with `A` [2].

   union.js:24:42
   24| declare var five : $Diff<{a: A, c : C} | {b: B, c : C}, {a : A} | {b: B}>;
                                                ^^^^^^^^^^^^^ [1]

References:
   union.js:24:62
   24| declare var five : $Diff<{a: A, c : C} | {b: B, c : C}, {a : A} | {b: B}>;
                                                                    ^ [2]


Error ---------------------------------------------------------------------------------------------------- union.js:30:2

Cannot cast `six` to object type because property `c` is missing in object type [1] but exists in object type [2].

   union.js:30:2
   30| (six : {c : C, d : D}); // error
        ^^^

References:
   union.js:28:48
   28| declare var six : $Diff<{a: A, b : B, c : C} | {a : A, b: B, d : D}, {a : A} | {b: B}>;
                                                      ^^^^^^^^^^^^^^^^^^^^ [1]
   union.js:30:8
   30| (six : {c : C, d : D}); // error
              ^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- union.js:30:2

Cannot cast `six` to object type because property `d` is missing in object type [1] but exists in object type [2].

   union.js:30:2
   30| (six : {c : C, d : D}); // error
        ^^^

References:
   union.js:28:25
   28| declare var six : $Diff<{a: A, b : B, c : C} | {a : A, b: B, d : D}, {a : A} | {b: B}>;
                               ^^^^^^^^^^^^^^^^^^^^ [1]
   union.js:30:8
   30| (six : {c : C, d : D}); // error
              ^^^^^^^^^^^^^^ [2]



Found 18 errors
